--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+<html class="h-100" lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,11 +9,24 @@
     <link href="https://fonts.googleapis.com/css2?family=Varela&family=Varela+Round&display=swap" rel="stylesheet"> 
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
-  <body>
+  <body class="d-flex flex-column h-100">
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app"></div>
+    <main class="flex-shrink-0">
+      <div class="container">
+        <div id="app"></div>
+      </div>
+    </main>
     <!-- built files will be auto injected -->
+    <footer class="footer mt-auto py-3">
+      <div class="container">
+        <div class="col-6 mx-auto">
+          <p class="text-center">
+            Support the RestedXP Addon <a href="https://www.restedxp.com/" target="_blank">here</a>
+          </p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
